[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -71.5
margin_right = 101.5
margin_bottom = -42.5
custom_fonts/font = SubResource( 1 )
text = "SETTINGS_LABEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.9237
margin_top = -31.6171
margin_right = 56.0763
margin_bottom = -10.6171
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="OptionsButtons"]
margin_right = 154.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "ENGLISH"
flat = true
items = [ "ENGLISH", null, false, 0, null, "PORTUGUESE", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LanguageLabel" type="Label" parent="."]
margin_left = 422.076
margin_top = 176.883
margin_right = 539.076
margin_bottom = 190.883
custom_fonts/font = SubResource( 3 )
text = "LANGUAGE_LABEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 83.2843
margin_top = 325.929
margin_right = 212.284
margin_bottom = 350.929
custom_fonts/font = SubResource( 4 )
text = "BACK_BUTTON"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="OptionsButtons/LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
